# LRE-Axel

./: .gitignore  test.py
cuda/: CMakeLists.txt  Makefile  conanfile.txt  main.cpp
cuda/include/: area_filtering.cuh  area_filtering_c.hpp  attribute_compute.cuh  attribute_compute_c.hpp  depth_image.cuh  depth_image_c.hpp  max_tree.cuh  max_tree_c.hpp  point.hpp  tilling.cuh  tilling_c.hpp  utils.hpp  vector2D.cuh  vector2D.hpp
cuda/src/: area_filtering.cu  area_filtering_c.cpp  attribute_compute.cu  attribute_compute_c.cpp  depth_image.cu  depth_image_c.cpp  max_tree.cu  max_tree_c.cpp  point.cpp  tilling.cu  tilling_c.cpp  utils.cpp
python/: benchmark.py  test.py
python/src/: berger.py
src/: Berger.py  berger.py  display.py  test.py
